k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: govambiental-prod
  labels:
    ambiente: producao
