k8s/overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: govambiental-api
spec:
  rules:
    - host: govambiental.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: govambiental-api
                port:
                  name: http
